<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ic_launcher_background"
    android:padding="16dp"
    android:id="@+id/toolbar"
    >

    <ImageView
        android:id="@+id/actionBarLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/actionbarleft"
        android:src="@drawable/ic_arrow_back_24" />

    <TextView
        android:id="@+id/actionBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="32sp"
        android:fontFamily="sans-serif-medium"
        android:foregroundGravity="center_vertical"
        android:gravity="center_vertical"
        android:shadowColor="#A6A5A5"
        android:text="@string/app_name"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/actionBarRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/actionbarright"
        android:src="@drawable/ic_baseline_delete_24" />


</RelativeLayout>