<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddNotes">

    <include
        android:id="@+id/include3"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/addNotesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="#FFF3E0"
        android:ems="10"
        android:hint="@string/t_tulo"
        android:inputType="text"
        android:nestedScrollingEnabled="false"
        android:outlineProvider="bounds"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#404043"
        android:textColorLink="@color/ic_launcher_background"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addNotesNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/addNotesNote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#FFF3E0"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/anota_es"
        android:inputType="textMultiLine"
        android:nestedScrollingEnabled="false"
        android:outlineProvider="bounds"
        android:padding="10dp"
        android:scrollbarSize="4dp"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textColorHint="#404043"
        android:textColorLink="@color/ic_launcher_background"
        android:textSize="14sp"
        android:textStyle="normal"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNotesTitle"
        android:importantForAutofill="no" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/save_btn"
        android:focusable="true"
        app:backgroundTint="@color/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_done_24" />

</androidx.constraintlayout.widget.ConstraintLayout>